Fixing contrast ratio

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a:focus {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc .a-btn:hover,
@@ -145,7 +145,7 @@ a:focus {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -543,7 +543,7 @@ h4 {
 }
 
 .h5 {
-  color: rgba(255, 255, 255, 0.7) !important;
+  color: rgba(255, 255, 255, 1) !important;
 }
 
 p {
